# file-watcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: dependency-review.yml  formatting.yml  linting.yml  scorecard.yml  tests.yml  trivy.yml
container/: file_watcher.D  file_watcher_operator.D
file_watcher/: event_handlers.py  file_watcher.py  lastrun_file_monitor.py  main.py  utils.py
file_watcher/database/: db_updater.py
file_watcher_operator/: file_watcher_operator.py
test/: docker-compose.yml  test_e2e.py  test_event_handlers.py  test_file_watcher.py
test/file_watcher/: docker-compose.yml  test_event_handlers.py  test_file_watcher.py  test_lastrun_file_monitor.py  test_main.py  utils.py
