[project]
name = "file-watcher"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "pika==1.3.2",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.27",
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/file-watcher"

[project.scripts]
file_watcher = "file_watcher.main:main"

[project.optional-dependencies]
formatting = [
    "black==24.2.0"
]

test = [
    "pytest==8.0.2",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.23.5"
]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.8.0",
    "file_watcher[test]"
]

dev = [
    "file_watcher[code-inspection]"
]

[tool.setuptools]
packages = ["file_watcher"]
