[project]
name = "file-watcher"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "pika==1.3.2",
    "psycopg2==2.9.6",
    "SQLAlchemy==2.0.13",
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/file-watcher"

[project.scripts]
file_watcher = "file_watcher.main:main"

[project.optional-dependencies]
operator = [
    "kopf==1.37.1",
    "kubernetes==29.0.0",
    "PyYAML==6.0.1"
]

formatting = [
    "black==23.10.1"
]

test = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.0"
]

code-inspection = [
    "pylint==3.0.2",
    "mypy==1.6.0",
    "types-PyYAML==6.0.12.12",
    "file_watcher[test]",
    "file_watcher[operator]"
]

dev = [
    "file_watcher[code-inspection]"
]

[tool.setuptools]
packages = ["file_watcher"]
