[project]
name = "file-watcher"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "pika==1.3.2",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.29",
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/file-watcher"

[project.scripts]
file_watcher = "file_watcher.main:main"

[project.optional-dependencies]
operator = [
    "kopf==1.37.1",
    "kubernetes==29.0.0",
    "PyYAML==6.0.1"
]

formatting = [
    "black==24.3.0"
]

test = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6"
]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.9.0",
    "types-PyYAML==6.0.12.20240311",
    "file_watcher[test]",
    "file_watcher[operator]"
]

dev = [
    "file_watcher[code-inspection]"
]

[tool.setuptools]
packages = ["file_watcher"]
